--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
         exclude_types: [ jupyter ]
@@ -10,19 +10,22 @@ repos:
         exclude_types: [ jupyter ]
       - id: check-docstring-first
       - id: debug-statements
-      - id: check-yaml
       - id: check-ast
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.0.246
     hooks:
-      - id: black
-        args: [ --line-length=120 ]
-        exclude_types: [ jupyter ]
+      - id: ruff
+        # Respect `exclude` and `extend-exclude` settings.
+        args: [ --fix,
+                --line-length, "120",
+                --target-version, "py310",
+        ]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910
+    rev: v1.0.0
     hooks:
       - id: mypy
-        args: [ --python-version=3.8,
+        args: [ --python-version=3.10,
                 --disallow-untyped-calls,
                 --disallow-untyped-defs,
                 --disallow-incomplete-defs,
@@ -31,23 +34,12 @@ repos:
                 --warn-redundant-casts,
                 --ignore-missing-imports,
         ]
-        additional_dependencies: ['types-pyyaml==5.4.1']
         exclude_types: [ jupyter ]
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.4
-    hooks:
-      - id: flake8
-        args: [
-                --max-line-length=120,
-                "--ignore=E226,E302,E41,W504,W503,E203"  # Needs to be string, otherwise it will put a breaking space
-        ]
-        exclude_types: [ jupyter ]
-        additional_dependencies: [ "flake8-bugbear==20.1.4" ]
-        exclude: infrastructure
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.9.2
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
     hooks:
       - id: isort
+        name: isort (python)
         args: [ --profile=black,
                 --line-length=120,
                 --multi-line=VERTICAL_HANGING_INDENT,
