--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,14 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-torchvision = "^0.12.0"
+torchvision = "^0.14.1"
 pandas = "^1.4.2"
 matplotlib = "^3.5.1"
 pytorch-lightning = "^1.6.1"
 h5py = "^3.6.0"
-torch = "^1.11.0"
+torch = "^1.13.1"
 torchmetrics = "^0.8.1"
+pydantic = "^1.10.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
