--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ torch = "^1.13.1"
 torchmetrics = "^0.8.1"
 pydantic = "^1.10.4"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+tensorboard = "^2.12.0"
+torch-tb-profiler = "^0.4.1"
 pytest = "^7.1.1"
 pre-commit = "^2.18.1"
 poethepoet = "^0.10.0"
