--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,10 @@ dependencies = [
     "h5py>=3.12.1",
     "matplotlib>=3.10.0",
     "pandas>=2.2.3",
-    "pydantic>=2.10.4",
     "pytorch-lightning>=2.5.0.post0",
     "torch>=2.5.1",
     "torchmetrics>=1.6.0",
     "torchvision>=0.20.1",
-    "typer>=0.15.1",
 ]
 
 
@@ -24,10 +22,12 @@ dependencies = [
 dev = [
     "jupyter>=1.1.1",
     "pre-commit>=4.0.1",
+    "pyqt6>=6.8.0",
     "pytest>=8.3.4",
     "ruff>=0.8.4",
     "tensorboard>=2.18.0",
     "torch-tb-profiler>=0.4.3",
+    "typer>=0.15.1",
 ]
 
 [build-system]
