--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dev = [
     "pyqt6>=6.8.0",
     "pytest>=8.3.4",
     "ruff>=0.8.4",
+    "seaborn>=0.13.2",
     "tensorboard>=2.18.0",
     "torch-tb-profiler>=0.4.3",
     "typer>=0.15.1",
