--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ellipse-rcnn"
 version = "0.2.0"
-description = "A PyTorch Implementation of Ellipse-RCNN"
+description = "An implementation of the Ellipse R-CNN object detection model in PyTorch, based on 'Ellipse R-CNN: Learning to Infer Elliptical Object from Clustering and Occlusion' by Dong et al."
 authors = [
     { name = "Wouter Doppenberg", email = "wouterdoppenberg@gmail.com" }
 ]
