--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,7 @@ dependencies = [
     "h5py>=3.12.1",
     "matplotlib>=3.10.0",
     "pandas>=2.2.3",
-    "pytorch-lightning>=2.5.0.post0",
     "torch>=2.5.1",
-    "torchmetrics>=1.6.0",
     "torchvision>=0.20.1",
 ]
 
@@ -33,6 +31,13 @@ dev = [
     "tensorboard>=2.18.0",
     "torch-tb-profiler>=0.4.3",
     "typer>=0.15.1",
+]
+hf = [
+    "huggingface-hub>=0.27.1",
+]
+pl = [
+    "pytorch-lightning>=2.5.0.post0",
+    "torchmetrics>=1.6.1",
 ]
 
 [project.scripts]
