--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,17 +1,11 @@
-name: CI
-
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  release:
+    types: [ published ]
 
 
 jobs:
-  lint-and-test:
-    name: Lint & Test
+  publish:
+    name: Publish package
     runs-on: ubuntu-latest
 
     steps:
@@ -29,5 +23,10 @@ jobs:
         run: uvx pre-commit run --all
 
       - name: Run tests
-        # For example, using `pytest`
         run: uv run pytest tests
+
+      - name: Build
+        run: uv build
+
+      - name: Publish to PyPI
+        run: uv publish --token ${{ secrets.PYPI_TOKEN }}
